syntax = "proto3";

package shopping_client;

option go_package = "build/shopping_client";

message AdListVo {
  // 广告 id
  string adId = 1;
  // 广告类型(1:全网推广广告, 2:商家自定义广告)
  int64 adType = 2;
  // 广告位置(1:首页, 2:列表页,3详情页)
  int64 position = 3;
  // 店铺id
  string storeId = 4;
  // 呈现类型(1:轮播图广告, 2:单图片广告)
  int64 viewType = 5;
  // 广告信息json数组：[{"title":"商品标题","url":"广告图地址","goodId":"跳转的商品id"}]
  string adInfo = 6;
  // 删除状态
  bool delStatus = 7;
  // 创建人
  string createBy = 8;
  // 修改人
  string updateBy = 9;
  // 创建时间
  string createTime = 10;
  // 修改时间
  string updateTime = 11;
}

// 广告id参数
message AdIds {
  repeated string adIds = 1;
  string userId = 2;
}

// 广告详情参数
message AdDetailVo {
  // 广告 id
  string adId = 1;
  // 广告类型(1:全网推广广告, 2:商家自定义广告)
  int64 adType = 2;
  // 广告位置(1:首页, 2:列表页,3详情页)
  int64 position = 3;
  // 店铺id
  string storeId = 4;
  // 呈现类型(1:轮播图广告, 2:单图片广告)
  int64 viewType = 5;
  // 广告信息json数组：[{"title":"商品标题","url":"广告图地址","goodId":"跳转的商品id"}]
  string adInfo = 6;
  // 删除状态
  bool delStatus = 7;
  // 创建人
  string createBy = 8;
  // 修改人
  string updateBy = 9;
  // 创建时间
  string createTime = 10;
  // 修改时间
  string updateTime = 11;
}

message AddListParma {
  // 广告类型
  string type = 1;
  // 广告位置
  string position = 2;
}

// 返回结果
message AdResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  AdDetailVo detail = 3;  // 详情
  repeated AdListVo list = 4;  // 列表
}

// 业务实现
service AdService {
  // 查询 详情
  rpc FindById(AdIds) returns (AdResponse);

  // 根据广告位置及广告类型查询广告列别
  rpc FindAdList(AddListParma) returns (AdResponse);
}
